<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dustinjutras.com.dailyirohquotes.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0"
            android:text="@string/title_activity_settings"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:background="?attr/colorControlHighlight">

        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:scrollbarStyle="outsideInset">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:padding="5dp"
                    android:text="@string/notifications"
                    android:textAlignment="textStart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <TimePicker
                        android:id="@+id/tp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:timePickerMode="spinner" />

                    <Switch
                        android:id="@+id/switchNotifications"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:checked="true" />

                </LinearLayout>

                <Switch
                    android:id="@+id/switchVoiceSoundEffect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:checked="false"
                    android:text="@string/character_notification" />

                <Switch
                    android:id="@+id/switchVibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:checked="true"
                    android:text="@string/vibrate" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="?attr/colorControlHighlight">

                </FrameLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:padding="5dp"
                    android:text="@string/characters"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switchIroh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:checked="true"
                    android:text="Iroh"
                    android:thumbTint="@color/earthKingdom" />

                <Switch
                    android:id="@+id/switchAang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Aang"
                    android:thumbTint="@color/evenLighterBlue" />

                <Switch
                    android:id="@+id/switchAzula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Azula"
                    android:thumbTint="@color/fireKingdom" />

                <Switch
                    android:id="@+id/switchKatara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Katara"
                    android:thumbTint="@color/colorLightBlue" />

                <Switch
                    android:id="@+id/switchSokka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Sokka"
                    android:thumbTint="@color/colorLightBlue" />

                <Switch
                    android:id="@+id/switchToph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Toph"
                    android:thumbTint="@color/earthKingdom" />

                <Switch
                    android:id="@+id/switchZuko"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Zuko"
                    android:thumbTint="@color/fireKingdom" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/more_to_come"
                    android:textAlignment="center" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"
                    android:background="?attr/colorControlHighlight">

                </FrameLayout>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:padding="5dp"
                    android:text="@string/other"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switchSkipButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:checked="false"
                    android:text="@string/skip_button" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</FrameLayout>
