<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical"
    tools:context="dustinjutras.com.dailyirohquotes.MainActivity">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical"
        tools:context="dustinjutras.com.dailyirohquotes.MainActivity">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Daily" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="0"
                android:onClick="issaSecret"
                app:srcCompat="@mipmap/launcher_iroh_greencircle" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Iroh" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtQuote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ellipsize="none"
                        android:text='"This would be the quote contents, prolly a bit longer than this."'
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@+id/txtTitle"
                        app:layout_constraintRight_toRightOf="@+id/txtTitle"
                        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_weight="0"
                            android:text="-"
                            android:textAlignment="textEnd"
                            android:textColor="?android:attr/colorControlNormal"
                            android:textSize="16sp"
                            app:layout_constraintRight_toRightOf="@+id/txtQuote"
                            app:layout_constraintTop_toBottomOf="@+id/txtQuote" />

                        <TextView
                            android:id="@+id/txtIroh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_weight="0"
                            android:text="Iroh, "
                            android:textAlignment="textEnd"
                            android:textColor="?android:attr/colorControlNormal"
                            android:textSize="16sp"
                            app:layout_constraintRight_toRightOf="@+id/txtQuote"
                            app:layout_constraintTop_toBottomOf="@+id/txtQuote" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_weight="0"
                            android:text="Avatar: The Last Airbender"
                            android:textAlignment="textEnd"
                            android:textColor="?android:attr/colorControlNormal"
                            android:textSize="16sp"
                            android:textStyle="italic"
                            app:layout_constraintRight_toRightOf="@+id/txtQuote"
                            app:layout_constraintTop_toBottomOf="@+id/txtQuote" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <ImageButton
            android:id="@+id/btnNextQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:onClick="parseQuote"
            app:srcCompat="@mipmap/ic_next_quote" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/more_apps"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/rate"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/share"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/title_activity_settings"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnMoreApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="moreApps"
                android:padding="5dp"
                app:srcCompat="@mipmap/ic_more_apps" />

            <ImageButton
                android:id="@+id/btnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="rateApp"
                android:padding="5dp"
                app:srcCompat="@mipmap/ic_rate" />

            <ImageButton
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="share"
                android:padding="5dp"
                app:srcCompat="@mipmap/ic_share" />

            <ImageButton
                android:id="@+id/btnSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="openSettings"
                android:padding="5dp"
                app:srcCompat="@mipmap/ic_settings" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/placeHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/earthKingdom"
            android:paddingTop="20dp"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_arrow_up_white" />

    </LinearLayout>

</FrameLayout>
